# og-cli

./: .gitignore  Cargo.toml  README.md  curltest.json  install.py  package-lock.json
.github/workflows/: pr.yml
devin/Application/Properties/: launchSettings.json
src/: busybox.rs  common_docker.rs  config.rs  curl.rs  dg.rs  doctor.rs  dotnet.rs  dotnetrun.rs  fix.rs  kubernetes.rs  lib.rs  main.rs  mongo_db.rs  plugin.rs  rundotnet.rs  search.rs  sql.rs
src/git/: commands.rs  doctor.rs  git.rs  mod.rs
src/graphql/: gid.rs  mod.rs
src/kube/: doctor.rs  kube_config.rs  kubernetes.rs  mod.rs  rancher.rs
src/kubernetes/: doctor.rs  kube_config.rs  kubernetes.rs  mod.rs  rancher.rs
src/network/: commands.rs  doctor.rs  mod.rs  network.rs
wix/: main.wxs
