[package]
name = "og-cli"
version = "0.10.1"
edition = "2021"
authors = ["Digitec Galaxus OGs"]
repository = "https://github.com/tkaepp/og-cli"
description = "The CLI for DG OGs"

[package.metadata.wix]
upgrade-guid = "AC41557C-5BC2-4191-BF43-66692C85C3D0"
path-guid = "269B8B6A-2A06-4A55-8089-742DB1B02110"
license = false
eula = false

[[bin]]
name = "og"
path = "src/main.rs"

[dependencies]
arboard = "3.4.0"
azure_identity = "0.20.0"
azure_security_keyvault = "0.20.0"
base64 = "0.22.1"
bollard = "0.16.1"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
dialoguer = "0.11.0"
display_json = "0.2.1"
eyre = "0.6.12"
figment = { version = "0.10.19", features = ["json"] }
futures-util = "0.3.30"
git2 = { version = "0.19.0", optional = true }
glob = "0.3.1"
homedir = "0.2.1"
json = "0.12.4"
json_to_table = "0.7.0"
keyring = "2.3.3"
lazy_static = "1.5.0"
log = "0.4.22"
rancher = { git = "https://github.com/dannyyy/rancher-rs.git" }
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features = false, features = [
    "native-tls-vendored",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_yaml = "0.9.33"
simplelog = "0.12.2"
ssh-key = { version = "0.6.6", features = [
    "getrandom",
    "encryption",
    "crypto",
    "rsa",
    "ed25519",
] }
tempfile = "3.10.1"
tokio = "1.38.0"

[features]
git = ["dep:git2"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Whether to install an updater program
install-updater = true
